--- a/src/app/etudiants/etudiants.page.html
+++ b/src/app/etudiants/etudiants.page.html
@@ -31,21 +31,21 @@
       <table class="table table-striped table-hover align-middle">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nom</th>
+            <th scope="col">N°</th>
             <th scope="col">Prénom</th>
+            <th scope="col">Nom</th>
             <th scope="col">Date de Naissance</th>
-            <th scope="col">Classe</th>
+            <th scope="col">Filière</th>
             <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">1</th>
-            <td>Dupont</td>
-            <td>Jean</td>
+            <td>Samba</td>
+            <td>Ngom</td>
             <td>15/03/2005</td>
-            <td>Terminale S</td>
+            <td>IDA</td>
             <td>
               <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
               <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
@@ -53,10 +53,142 @@
           </tr>
           <tr>
             <th scope="row">2</th>
-            <td>Martin</td>
-            <td>Sophie</td>
+            <td>Astou</td>
+            <td>Dia</td>
             <td>22/07/2006</td>
-            <td>Première L</td>
+            <td>MIC</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Diodio Ndiaye</td>
+            <td>Ngom</td>
+            <td>10/12/2003</td>
+            <td>IDA</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
+            <td>Coumba </td>
+            <td>Sene</td>
+            <td>02/09/2004</td>
+            <td>CD</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">5</th>
+            <td>Moustapha </td>
+            <td>Gueye </td>
+            <td>22/11/2000</td>
+            <td>SJ</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+       <tr>
+            <th scope="row">6</th>
+            <td>Radia </td>
+            <td>Sow</td>
+            <td>29/01/2006</td>
+            <td>MIC</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">7</th>
+            <td>Diouma</td>
+            <td>Faye </td>
+            <td>20/12/2004</td>
+            <td>SJ</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">8</th>
+            <td>Oussmane </td>
+            <td>Diaz </td>
+            <td>02/04/2000</td>
+            <td>CD</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">9</th>
+            <td>Ablaye</td>
+            <td> Diouf </td>
+            <td>23/01/2007</td>
+            <td>SP</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">10</th>
+            <td>Mdeye Maty </td>
+            <td>Gueye </td>
+            <td>06/07/2002</td>
+            <td>IDA</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">11</th>
+            <td>Djily</td>
+            <td>Diop</td>
+            <td>22/11/2005</td>
+            <td>AES</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">12</th>
+            <td>Aminata </td>
+            <td>Ba </td>
+            <td>04/30/2000</td>
+            <td>SOCIO</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">13</th>
+            <td>Daouda  </td>
+            <td>Mbaye</td>
+            <td>12/19/2000</td>
+            <td>CD</td>
+            <td>
+              <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
+              <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">14</th>
+            <td>Modou </td>
+            <td>Ndao </td>
+            <td>28/10/2002</td>
+            <td>IDA</td>
             <td>
               <button type="button" class="btn btn-sm btn-info me-2">Modifier</button>
               <button type="button" class="btn btn-sm btn-danger">Supprimer</button>
@@ -71,12 +203,9 @@
         <li class="page-item disabled">
           <a class="page-link">Précédent</a>
         </li>
-        <li class="page-item active"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-          <a class="page-link" href="#">Suivant</a>
-        </li>
+   
+          <a class="page-link" href="">Suivant</a>
+      
       </ul>
     </nav>
 
@@ -107,9 +236,12 @@
               <label for="classeEtudiant" class="form-label">Classe</label>
               <select class="form-select" id="classeEtudiant">
                 <option selected disabled>Choisir une classe...</option>
-                <option value="1">Sixième A</option>
-                <option value="2">Cinquième B</option>
-                <option value="3">Terminale S</option>
+                <option value="1">IDA</option>
+                <option value="2">MIC</option>
+                <option value="3">CD </option>
+                <option value="1">SJ</option>
+                <option value="2">SP</option>
+                <option value="3">align-items-center </option>
               </select>
             </div>
             </form>
