--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,7 +45,7 @@
               </ion-card-title> 
             </ion-card-header>
             <ion-card-content>
-              Gérez les profils et les assignations des enseignants.
+              Gérez les profils et les assignations des tuteurs.
             </ion-card-content>
           </ion-card>
         </ion-col>
@@ -71,7 +71,7 @@
               </ion-card-title>
             </ion-card-header>
             <ion-card-content>
-              Suivez et gérez les absences des élèves et du personnel.
+              Suivez et gérez les absences des étudiants et du personnel.
             </ion-card-content>
           </ion-card>
         </ion-col>
@@ -93,11 +93,11 @@
           <ion-card >
             <ion-card-header>
               <ion-card-title>
-                <a href="deliberation">Délibérations & Bulletins</a>
+                <a href="deliberation">Délibérations & Relevés</a>
               </ion-card-title>
             </ion-card-header>
             <ion-card-content>
-              Accédez aux processus de délibération et aux bulletins scolaires.
+              Accédez aux processus de délibération et aux relevés scolaires.
             </ion-card-content>
           </ion-card>
         </ion-col>
