--- a/src/app/etudiants/etudiants.page.scss
+++ b/src/app/etudiants/etudiants.page.scss
@@ -25,7 +25,7 @@ ion-content {
   --background: var(--ion-color-light, #f4f5f8); // Light background for the content area
 
   .container {
-    background: rgb(242, 243, 242);
+    background: rgb(228, 235, 225);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -65,7 +65,7 @@ ion-content {
           background-color: var(--ion-color-step-50, #f8f8f8); // Light stripe
         }
         td, th {
-          padding: 8px 75px; // More padding for better readability
+          padding: 8px 70px; // More padding for better readability
         }
       }
     }
@@ -91,7 +91,7 @@ ion-content {
         border-color: var(--ion-color-primary, #3880ff);
       }
       &.disabled .page-link {
-        color: var(--ion-color-medium, #f7f8f6);
+        color: var(--ion-color-medium, #8aac64);
         border-color: var(--ion-color-step-200, #e0e0e0);
         pointer-events: none; // Disable click
       }
