--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,30 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+    <ion-title>Gestion des Étudiants</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-input label="Nom" placeholder="Nom de l'étudiant" [(ngModel)]="newStudent.nom"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input label="Prénom" placeholder="Prénom de l'étudiant" [(ngModel)]="newStudent.prenom"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input label="Classe" placeholder="Classe" [(ngModel)]="newStudent.classe"></ion-input>
+    </ion-item>
+    <ion-button expand="block" (click)="addStudent()">Ajouter Étudiant</ion-button>
+  </ion-list>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list>
+    <ion-item *ngFor="let student of students">
+      <ion-label>
+        <h2>{{ student.nom }} {{ student.prenom }}</h2>
+        <p>Classe : {{ student.classe }}</p>
+      </ion-label>
+      <ion-button slot="end" color="danger" (click)="deleteStudent(student)">Supprimer</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
