Suppression des lignes de commentaire

--- a/src/app/etudiants/etudiants.page.html
+++ b/src/app/etudiants/etudiants.page.html
@@ -120,7 +120,7 @@
           <tr>
             <th scope="row">8</th>
             <td>Oussmane </td>
-            <td>Diaz </td>
+            <td>Diaw </td>
             <td>02/04/2000</td>
             <td>CD</td>
             <td>
