--- a/src/app/note/note.page.scss
+++ b/src/app/note/note.page.scss
@@ -18,7 +18,7 @@ ion-content {
 
   .container {
     background-color: var(--ion-color-light, #8aac64);
-    padding-bottom: 20px; // Add some padding at the bottom
+    padding-bottom: 20px; 
 
     h2 {
       color: var(--ion-color-dark, #222);
@@ -76,26 +76,26 @@ ion-content {
         padding: 20px;
 
         .table-responsive {
-          margin-bottom: 20px; // Space below the table before the button
+          margin-bottom: 20px; 
         }
 
         .table {
           width: 100%;
-          margin-bottom: 0; // Remove default table margin
+          margin-bottom: 0; 
           border-collapse: separate;
           border-spacing: 0;
-          border: 5px solid var(--ion-color-medium-tint, #21487c); // Outer border for the table
+          border: 5px solid var(--ion-color-medium-tint, #21487c); 
 
           thead {
             tr {
               th {
-                background-color: var(--ion-color-step-100, #1a9c87); // Lighter header background
+                background-color: var(--ion-color-step-100, #1a9c87); 
                 color: var(--ion-color-dark, #222222);
                 font-weight: 100;
                 padding: 12px 15px;
                 text-align: left;
                 border-bottom: 1px solid var(--ion-color-medium-tint, #080101);
-                border-right: 1px solid var(--ion-color-medium-tint, #0c0303); // Vertical border
+                border-right: 1px solid var(--ion-color-medium-tint, #0c0303); 
                 &:last-child {
                   border-right: none;
                 }
@@ -108,14 +108,14 @@ ion-content {
               td {
                 padding: 12px 15px;
                 border-bottom: 1px solid var(--ion-color-medium-tint, #050101);
-                border-right: 1px solid var(--ion-color-medium-tint, #070000); // Vertical border
+                border-right: 1px solid var(--ion-color-medium-tint, #070000); 
                 &:last-child {
                   border-right: none;
                 }
 
                 input[type="number"] {
                   width: 100%;
-                  max-width: 80px; // Smaller width for note input
+                  max-width: 80px; 
                   text-align: center;
                   padding: 6px 8px;
                   border-radius:4px;
@@ -136,7 +136,7 @@ ion-content {
               }
               &:last-child {
                 td {
-                  border-bottom: none; // No border for the last row
+                  border-bottom: none;
                 }
               }
             }
@@ -164,7 +164,7 @@ ion-content {
       font-weight: 500;
       ion-icon {
         font-size: 1.5em;
-        margin-top: -2px; // Adjust icon alignment
+        margin-top: -2px; 
       }
       &.alert-success {
         background-color: var(--ion-color-success-tint, #3bc87c);
